ETSL-460 footer alignment changes in RTL and 460 Business blog alignment fixes

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/footer/footer.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/footer/footer.scss
@@ -1183,11 +1183,13 @@
 
     &:last-child {
       a {
-        padding-right: toRem(24);
         margin-right: toRem(24);
-        border-right: toRem(1) solid $white-2;
       }
     }
+	a{
+		border-right: none;
+		padding-right: 0;
+	}
   }
 }
 
